# korpotron

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  idea.md  manage.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
context/changes/: README.md
context/deployment/: deployment-plan.md  deployment-steps.md
context/domain/: 01-domain-distillation.md  02-invariant-aggregate-refactor.md  03-anti-corruption-layer.md
context/foundation/: README.md  idea.md  infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md  test-plan.md
core/: admin.py  apps.py  context_processors.py  forms.py  llm.py  models.py  option_group_urls.py  urls.py  views.py
core/fixtures/: onboarding_defaults.json
core/migrations/: 0001_initial.py  0002_alter_option_unique_together.py  0003_alter_optiongroup_unique_together.py  0004_dailygenerationcount.py  0005_onboardingstate.py
korpotron/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: korpotron.css
templates/: _head.html  base.html  home.html
templates/core/: _delete_dialog.html  generate.html  landing.html  optiongroup_confirm_delete.html  optiongroup_form.html  optiongroup_list.html  template_confirm_delete.html  template_form.html  template_list.html
tests/: conftest.py  test_auth.py  test_ci_gate_check.py  test_core_models.py  test_generate.py  test_llm.py  test_onboarding.py  test_option_group_views.py  test_registration.py  test_template_views.py
tools/: eval_prompts.py  review.py
(+141 files in other folders)
