[project]
name = "korpotron"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]
